--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 
 allprojects {
     group = 'com.example'
-    version = '0.0.1-SNAPSHOT'
+    version = '0.1.1'
 
     repositories {
         mavenCentral()
