test(demo-app): Update verification tests and demo application
- Add and update tests for BankClient, HelloController, and others.
- Ensure demo app reflects the latest engine capabilities.
- Fix compilation issues in generated tests.

--- a/sample-projects/demo-app/build.gradle
+++ b/sample-projects/demo-app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.0'
-    id 'io.spring.dependency-management' version '1.1.6'
+    id 'org.springframework.boot' version '3.4.1'
+    id 'io.spring.dependency-management' version '1.1.7'
     id 'org.asciidoctor.jvm.convert' version '4.0.2'
 }
 
@@ -10,6 +10,14 @@ version = '0.1.1'
 
 java {
     sourceCompatibility = '17'
+}
+
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/java', 'build/generated/sources/annotationProcessor/java/main']
+        }
+    }
 }
 
 configurations {
@@ -24,6 +32,7 @@ repositories {
 
 ext {
     set('snippetsDir', file("build/generated-snippets"))
+    querydslVersion = "5.0.0" // Define QueryDSL version
 }
 
 dependencies {
@@ -31,6 +40,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     
+    // QueryDSL
+    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta" // Use jakarta classifier
+    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta" // Use jakarta classifier for the plugin's processor
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -45,20 +60,18 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.mockito:mockito-core:5.5.0'
 
-    // QueryDSL
-    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
-    annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
-    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
-    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    // JUnit Jupiter API and Engine for testing
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.11.0'
+    testImplementation 'org.junit.platform:junit-platform-launcher'
 }
 
-tasks.named('test') {
-    outputs.dir snippetsDir
+test {
     useJUnitPlatform()
 }
 
-tasks.named('asciidoctor') {
-    inputs.dir snippetsDir
-    dependsOn test
+// Task to clean generated QueryDSL files
+tasks.clean {
+    delete file('build/generated/sources/annotationProcessor/java/main')
 }
