--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.shell:spring-shell-starter:3.2.0' // Explicitly set version
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.ai:spring-ai-ollama-spring-boot-starter:1.0.0-M5'
 
     // 🧱 Tools
     implementation 'com.github.javaparser:javaparser-core:3.27.1'
