--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,20 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '2.1.0' apply false
-    id 'org.springframework.boot' version '3.4.1' apply false
-    id 'io.spring.dependency-management' version '1.1.7' apply false
-    id 'org.jetbrains.intellij.platform' version '2.1.0' apply false
+    id 'org.springframework.boot' version '3.5.10'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
 allprojects {
     group = 'com.example'
     version = '0.1.1'
-
-    repositories {
-        mavenCentral()
-        maven { url 'https://repo.spring.io/milestone' }
-        maven { url 'https://repo.spring.io/snapshot' }
-    }
 }
 
 subprojects {
     apply plugin: 'java'
     apply plugin: 'java-library'
     
-    repositories {
-        mavenCentral()
-        maven { url 'https://repo.spring.io/milestone' }
-        maven { url 'https://repo.spring.io/snapshot' }
-    }
-    
     dependencies {
-        implementation platform('org.springframework.boot:spring-boot-dependencies:3.4.1')
+        implementation platform('org.springframework.boot:spring-boot-dependencies:3.5.10')
     }
     
     java {
