--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,33 +1,28 @@
 plugins {
-    id 'org.springframework.boot'
+    id 'org.springframework.boot' version '3.5.10'
+    id 'io.spring.dependency-management' version '1.1.7'
     id 'java-library'
 }
 
-repositories {
-    mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
-    maven { url 'https://repo.spring.io/snapshot' }
-}
-
 dependencies {
-    implementation 'org.springframework.shell:spring-shell-starter:3.2.0' // Explicitly set version
+    implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-M5")
+    implementation 'org.springframework.shell:spring-shell-starter:3.4.1'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.ai:spring-ai-ollama-spring-boot-starter:1.0.0-M5'
+    implementation 'org.springframework.ai:spring-ai-ollama-spring-boot-starter'
 
     // 🧱 Tools
     implementation 'com.github.javaparser:javaparser-core:3.27.1'
     implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.27.1'
 
     // ANTLR dependencies
-    implementation 'org.antlr:antlr4:4.13.1'
-    // The runtime dependency is for the generated parsers to run
-    implementation 'org.antlr:antlr4-runtime:4.13.1'
+    implementation 'org.antlr:antlr4:4.13.2'
+    implementation 'org.antlr:antlr4-runtime:4.13.2'
 
     // 🌶️ Lombok: Pure Power for Java 21
-    compileOnly 'org.projectlombok:lombok:1.18.34'
-    annotationProcessor 'org.projectlombok:lombok:1.18.34'
-    testCompileOnly 'org.projectlombok:lombok:1.18.34'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
+    compileOnly 'org.projectlombok:lombok:1.18.42'
+    annotationProcessor 'org.projectlombok:lombok:1.18.42'
+    testCompileOnly 'org.projectlombok:lombok:1.18.42'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.42'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
