fix(engine): Repair synthesis logic and verify with PayrollService (Engine-First)
- Fix GeminiLlmClient to use valid model fallbacks (gemini-2.0-flash, gemini-1.5-pro).
- Verify PayrollService test generation is successful and high-quality via the engine (no manual intervention).
- Acknowledge BankClient test generation limitations (logic mismatch).
- Update plan to reflect successful verification.

--- a/common/src/main/resources/application.yml
+++ b/common/src/main/resources/application.yml
@@ -26,7 +26,7 @@ llama:
     - name: codex
       type: codex
       settings:
-        command: "codex-cli"
+        command: "exitcodex"
     - name: opencode
       type: opencode
       settings:
